--- a/assets/styles.css
+++ b/assets/styles.css
@@ -22,6 +22,7 @@ body {
     min-height: 400px;
     background-color: #1d1e33;
     padding: 2rem;
+    border-radius: 20px;
 }
 
 /* IMC Form */
@@ -51,6 +52,7 @@ body {
 
 .form-control input {
     padding: 1rem 0.5rem;
+    border-radius: 20px;
 }
 
 .action-control {
@@ -70,6 +72,7 @@ button {
     cursor: pointer;
     opacity: 0.9;
     flex: 1;
+    border-radius: 20px;
 }
 
 button:hover {
