--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,6 +11,7 @@ body {
     align-items: center;
     min-height: 100vh;
     color: #fff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .hide {
